--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,7 +27,17 @@ canvas {
   margin: 10px 0;
 }
 
-.btn {
+
+.optionBtn {
+  margin: 20px;
+  width: 20%;
+  color: rgba(9, 78, 43, 0.603);
+  margin: auto;
+  font-size: 1.7em;
+}
+
+
+.longbtn {
   margin: 10px;
   width: 80%;
   margin: auto;
@@ -42,3 +52,15 @@ canvas {
   display: block;
   text-align: center;
 }
+
+header {
+  text-align: center;
+  font-size: 24px;
+  padding: 20px;
+  background-color: white;
+  color: black;
+  transition: 0.5s ease 0.5s;
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
