--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,14 +1,15 @@
-html, body {
+/* html, body {
   margin: 0;
   padding: 0;
-}
-canvas {
-  display: block;
-}
+} */
 
-* {
+/* canvas {
+  display: block;
+} */
+
+/* * {
   box-sizing: border-box;
-}
+} */
 
 .output {
   width: 90%;
@@ -31,9 +32,11 @@ canvas {
 .optionBtn {
   margin: 20px;
   width: 20%;
-  color: rgba(9, 78, 43, 0.603);
+  color: black;
   margin: auto;
   font-size: 1.7em;
+  border-radius: 8px;
+  margin-left:10px;
 }
 
 
