--- a/practice1/style.css
+++ b/practice1/style.css
@@ -1,15 +1,8 @@
-/* html, body {
+html, body {
   margin: 0;
   padding: 0;
-} */
+}
 
-/* canvas {
-  display: block;
-} */
-
-/* * {
-  box-sizing: border-box;
-} */
 
 .output {
   width: 90%;
@@ -37,6 +30,7 @@
   font-size: 1.7em;
   border-radius: 8px;
   margin-left:10px;
+  cursor: pointer;
 }
 
 
@@ -47,6 +41,7 @@
   font-size: 1.7em;
   border-radius: 8px;
   margin-left:10px;
+  cursor: pointer;
 }
 
 .longbtn {
@@ -92,3 +87,25 @@ header {
 }
 
 
+#tallyBoard{
+  padding:10px;
+}
+
+.tallyRow {
+  display: flex;
+  justify-content: center;
+  width: 130px;
+  margin: 0 auto 8px;
+}
+
+.tallyBox {
+  border: 2px solid rgb(58, 58, 60);
+  font-family: inherit;
+  font-weight: bold;
+  padding: 0;
+  height: 20px;
+  width: 20px;
+  flex-grow: 1;
+  margin-right: 6px;
+  user-select: none;
+}
