--- a/practice1/style.css
+++ b/practice1/style.css
@@ -3,6 +3,36 @@ html, body {
   padding: 0;
 }
 
+#container {
+  display: flex;
+  background-color: black;
+  height: 100%;
+  align-items: center;
+  flex-direction: column;
+  width:90%;
+  margin:auto;
+}
+
+#game {
+  width: 100%;
+  /* max-width: 500px; */
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+.title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin: 0.4rem 0 0.4rem 0;
+  /* text-align: center; */
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.content h1 span.fa { top: 0; }
 
 .output {
   width: 90%;
@@ -68,7 +98,30 @@ header {
   color: black;
   transition: 0.5s ease 0.5s;
   max-width: 1080px;
-  margin: 0 auto;
+  margin: auto;
+  border-bottom: 1px solid rgb(58, 58, 60);
+  display: flex;
+  justify-content: space-between;
+}
+
+/* h1, span{
+  display: inline-block;
+  vertical-align: middle;
+} */
+
+.fa-icon   { 
+  align-self: center; 
+  cursor: pointer;
+}
+
+h1 {
+  font-size: 2em;
+  line-height: 0.5em;
+  margin:40px
+}
+
+.left10 {
+  margin-left: 10px;
 }
 
 .padDiv {
@@ -108,4 +161,54 @@ header {
   flex-grow: 1;
   margin-right: 6px;
   user-select: none;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-content {
+  background-color: gainsboro; 
+  color: rgb(18, 18, 19);
+  margin: 5% auto;
+  padding: 20px;
+  width: 80%;
+  max-width: 500px;
+  font-size: 1.5em;
+}
+
+.modal-content hr {
+  border: 1px solid rgb(58, 58, 60);
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#examples {
+  width: 80%;
+}
+
+.hidden {
+  display: none;
 }
