--- a/quando/style.css
+++ b/quando/style.css
@@ -104,11 +104,11 @@ header {
   text-align: center;
   font-size: 24px;
   padding: 20px;
-  background-color: white;
+  background-color: beige;
   color: black;
   transition: 0.5s ease 0.5s;
-  max-width: 1080px;
-  margin: auto;
+  /* max-width: 1080px;
+  margin: auto; */
   border-bottom: 1px solid rgb(58, 58, 60);
   display: flex;
   justify-content: space-between;
@@ -125,6 +125,8 @@ header {
 }
 
 h1 {
+  color:white;
+  text-align: center;
   font-size: 2em;
   line-height: 0.5em;
   margin:40px
