--- a/quando/style.css
+++ b/quando/style.css
@@ -13,7 +13,7 @@ html, body {
   margin:auto;
 }
 
-#game {
+#game-head {
   width: 100%;
   /* max-width: 500px; */
   height: 100%;
@@ -58,16 +58,6 @@ html, body {
   color: black;
   margin: auto;
   font-size: 1.7em;
-  border-radius: 8px;
-  margin-left:10px;
-  cursor: pointer;
-}
-
-.Opbtn {
-  margin: 20px;
-  width: 20%;
-  margin: auto;
-  font-size: 1em;
   border-radius: 8px;
   margin-left:10px;
   cursor: pointer;
@@ -198,11 +188,32 @@ h1 {
   font-size: 1.5em;
 }
 
+.tspan {
+  margin-right: auto;
+}
+
+.Opbtn {
+  /* margin: 20px; */
+  width: 20%;
+  /* margin: auto; */
+  font-size: 1em;
+  border-radius: 8px;
+  margin-left:auto;
+  cursor: pointer;
+}
+
+#goBtn {
+  width: 60%;
+  height: 2.5em;
+  margin:20px auto;
+  display:block;
+}
+
 #opWrapper {
     /* justify-content: center; */
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding-top:0.5em;
 }
 
