--- a/quando/style.css
+++ b/quando/style.css
@@ -197,7 +197,7 @@ h1 {
 
 .Opbtn {
   /* margin: 20px; */
-  width: 20%;
+  /* width: 20%; */
   /* margin: auto; */
   font-size: 1em;
   border-radius: 8px;
