--- a/quando/style.css
+++ b/quando/style.css
@@ -147,6 +147,9 @@ h1 {
 
 #tallyBoard{
   padding:10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .tallyRow {
@@ -157,13 +160,13 @@ h1 {
 }
 
 .tallyBox {
+  display: flex;
   border: 2px solid rgb(58, 58, 60);
   font-family: inherit;
   font-weight: bold;
   padding: 0;
   height: 20px;
   width: 20px;
-  flex-grow: 1;
   margin-right: 6px;
   user-select: none;
 }
