--- a/quando/style.css
+++ b/quando/style.css
@@ -157,6 +157,8 @@ h1 {
   justify-content: center;
   width: 130px;
   margin: 0 auto 8px;
+  justify-content: center;
+  align-items: center;
 }
 
 .tallyBox {
